SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

#481 Introduced option to choose between the default (light) color theme and a dark theme.
  Changing to the dark color theme is done by switching to the FlatLaf Look&Feel with theme Flat Dark
  and by adjusting the SQL editor colors. The color theme can be switched at
  menu File --> Global Preferences --> tab General --> bottom off section Appearance.

Query connection pool: Added tooltip for state colors in the connection pool's status bar.

#603 NULL values can be colored.
  To change or switch off NULL value coloring
  go to menu File --> New Session Properties --> bottom of tab General.

Query connection pool.
  See Session status bar and menu File --> New Session properties
  --> tab SQL --> section "Avoid application hangs/delays"
  Often JDBC drivers block calls to a database connection when a SQL is being executed.
  By default a SQuirreL Session uses a single connection. That is why UI hangs may occur
  when the database connection is accessed during SQL execution. To avoid such hangs
  SQuirreL now allows a 'query connection pool' of additional connections
  which are used for SQLs executed from within the SQL editor only.
  Furthermore the pool allows parallel SQL execution even if the connection blocks during execution.
  Note: To keep a Session from blocking itself the pool is switched off when autocommit is switched off.
  This change was inspired by the discussion in bug #1488.

New Plugin for the Intersystem Cache database. The Plugin adds a new toolbar button to
  show statistics and query plan for an SQL query.
  Thanks to Martin Weissenborn for the Cache specific requirements

New SQL editor function to delete the current SQL statement.